wrote all needed service and controller methods; added some documentation;
