# docs/swagger.json
@@ -1,7 +1,9 @@
 {
     "swagger": "2.0",
     "info": {
-        "contact": {}
+        "title": "Enrollment service",
+        "contact": {},
+        "version": "1.0"
     },
     "paths": {
         "/api/records/": {
@@ -45,7 +47,7 @@
                 }
             }
         },
-        "/api/records/{courier_id}": {
+        "/api/records/{record_id}": {
             "get": {
                 "consumes": [
                     "application/json"
@@ -60,15 +62,15 @@
                 "parameters": [
                     {
                         "type": "integer",
-                        "description": "Courier identifier",
-                        "name": "courier_id",
+                        "description": "record identifier",
+                        "name": "record_id",
                         "in": "path",
                         "required": true
                     }
                 ],
                 "responses": {
                     "200": {
-                        "description": "Created",
+                        "description": "OK",
                         "schema": {
                             "$ref": "#/definitions/model.GetRecordResponse"
                         }
@@ -77,6 +79,43 @@
                         "description": "Bad Request",
                         "schema": {
                             "$ref": "#/definitions/model.BadRequestResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/users/records/{user_id}": {
+            "get": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "records-controller"
+                ],
+                "summary": "Получение записей пользователя",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "user identifier",
+                        "name": "user_id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/model.GetUserRecordsResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/model.GetRecordResponse"
                         }
                     }
                 }
@@ -128,6 +167,37 @@
                     "type": "string"
                 },
                 "user": {
+                    "type": "string"
+                }
+            }
+        },
+        "model.GetUserRecordsResponse": {
+            "type": "object",
+            "properties": {
+                "records": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/model.UsersRecord"
+                    }
+                },
+                "records_stored": {
+                    "type": "integer"
+                },
+                "user": {
+                    "type": "string"
+                }
+            }
+        },
+        "model.UsersRecord": {
+            "type": "object",
+            "properties": {
+                "created_at": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "msg_type": {
                     "type": "string"
                 }
             }
